--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,6 +29,10 @@
   name = "github.com/gorilla/websocket"
   version = "1.4.0"
 
+[[constraint]]
+  name = "github.com/urfave/cli"
+  version = "1.1.20"
+
 [prune]
   go-tests = true
   unused-packages = true
