--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,12 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  name = "github.com/spf13/cobra"
+  version = "0.0.3"
+
+
+[[constraint]]
+  name = "github.com/pkg/errors"
+  version = "0.8.1"
