Add buildkit support for cross-platform docker image publishing
- Added rules to Makefile and travis (travis part not tested)

  1. launch a buildkitd

  2. build + push the cross-platform docker images. The tags for the pushed
     images are set in the Makefile, similar to what was already
     implemented. Did not delete any previous rules in Makefile

- Created a Dockerfile.multi-arch

  - works like standard project Dockerfile, but adds cross-platform support

TODO

 - Signoff pm docker image tag names
 - annotate image manifests and support multi-arch image tags
 - replace Dockerfile with Dockerfile.multi-arch?

Signed-off-by: David Crook <david.crook@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+dist: xenial
 language: go
 
 go:
@@ -6,13 +7,20 @@ go:
 
 services:
 - docker
+
+addons:
+   apt:
+     packages:
+       - docker-ce
+
 script:
 - make docker
 - make dist
 
 after_success:
   - make docker-login
-  - make push
+  - make buildkitd
+  - make docker-buildkit-images
 
 before_deploy:
   - ./ci/hashgen.sh
