introduce docker-buildkit-push-manifests
- Creates "latest" tag alongside an annotated "base version" tag. These are
  both "multi-arch" manifest images

- also tags the version with "latest-ARCH"

Signed-off-by: David Crook <david.crook@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ after_success:
   - make docker-login
   - make buildkitd
   - make docker-buildkit-images
+  - make docker-buildkit-push-manifests
 
 before_deploy:
   - ./ci/hashgen.sh
