--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,20 @@
+checkoutLocation: go/src/github.com/inlets/inlets
+workspaceLocation: go/src/github.com/inlets/inlets
+ports:
+  - port: 8090
+    onOpen: ignore
 tasks: 
-  - init: go get -u github.com/inlets/inlets
-    command: cd $GOPATH/src/github.com/inlets/inlets
+  - init: go get -v ./...
+    command: |
+      head -c 16 /dev/urandom | shasum | cut -d" " -f1 > /tmp/inlets-token
+      inlets server --port=8090 --token="$(cat /tmp/inlets-token)"
+  - command: |
+      clear
+      gp await-port 8090 &&
+      remote=$(gp url 8090)
+      echo
+      echo "Inlets server is running on $(gp url 8090)."
+      echo "$(tput setaf 7)You can tunnel to it using $(tput setaf 2)inlets client --remote=${remote/https/wss} --token $(cat /tmp/inlets-token) --upstream=http://127.0.0.1:3000$(tput sgr0)"
+      echo
+      echo "Once you have an inlet client connected, head over to $(tput setaf 4)$(gp url 8090)$(tput sgr0) to access that service."
+    openMode: split-right
