Add manifest-latest job
Run manifest-latest job after_success

Signed-off-by: Marcos V. Rubido <github@marcosvrs.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ after_success:
   - make docker-login
   - make push
   - make manifest
+  - make manifest-latest
   - make docker-login-ghcr
   - make tag-ghcr
   - make push-ghcr
