--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,14 @@ after_success:
   - make docker-login
   - make push
   - make manifest
-  - make manifest-latest
   - make docker-login-ghcr
   - make tag-ghcr
   - make push-ghcr
   - make manifest-ghcr
+  - |
+    if [[ -n "$TRAVIS_TAG" ]]; then
+      make manifest-latest
+    fi
 
 before_deploy:
   - ./ci/hashgen.sh
